--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="action_settings">Settings</string>
     <string name="Adivinhe_numero">Adivinhe o numero em que estou a pensar entre 1 e 10</string>
     <string name="numero">Numero</string>
+    <string name="jogo_iniciado">Jogo iniciado</string>
+    <string name="Erro_num_intr">Introduza um numero entre 1 e 10</string>
+    <string name="num_maior">Não, é maior.</string>
+    <string name="num_menor">Não, é menor.</string>
+    <string name="acertou">Acertou</string>
+    <string name="num_tent_1">Acertou ao fim de</string>
+    <string name="num_tent_2">tentativas. Jogar de novo?</string>
+    <string name="sim">sim</string>
+    <string name="não">Não</string>
+    <string name="action_novo">Novo</string>
+    <string name="novo">Estatisticas</string>
 </resources>
